--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,36 +1,38 @@
 <nav class="navbar">
-      <div class="ui-g">
-        <div class="ui-g-12">
-            <a class="btn" type="button" style="text-decoration: none"
-            routerLinkActive="ativo" routerLink="/editais">
-              <i aria-hidden="true" class="fa fa-clipboard"></i>
-              Editais
-            </a>
-            <a class="btn" type="button" style="text-decoration: none"
-            routerLinkActive="ativo" routerLink="/alunos">
-              <i aria-hidden="true" class="fa fa-graduation-cap"></i>
-              Alunos
-            </a>
-            <a class="btn" type="button" style="text-decoration: none"
-            routerLinkActive="ativo" routerLink="/refeicoes">
-              <i aria-hidden="true" class="fas fa-cookie"></i>
-              Refeições
-            </a>
-            <a class="btn" type="button" style="text-decoration: none"
-            routerLinkActive="ativo" routerLink="/funcionarios">
-              <i aria-hidden="true" class="fa fa-user"></i>
-              Funcionários
-            </a>
-            <a class="btn-sair" type="button" style="text-decoration: none"
-            routerLinkActive="ativo">
-            Sair
-              <i aria-hidden="true" class="fa fa-sign-out"></i>
-            </a>
-            <a class="btn-sair" type="button" style="text-decoration: none"
-            routerLinkActive="ativo">
-            <i aria-hidden="true" class="fa fa-user-circle"></i>
-            Minha conta
-            </a>
-        </div>
-      </div>
-  </nav>
+  <div class="ui-g">
+    <div class="ui-g-12">
+      <a href="javascript:;" class="navbar-toggle" (click)="exibindoMenu = !exibindoMenu"><i class="fa fa-bars"></i></a>
+      <a class="btn menu-button" type="button" style="text-decoration: none" routerLinkActive="ativo" routerLink="/editais">
+        <i aria-hidden="true" class="fa fa-clipboard"></i>
+        Editais
+      </a>
+      <a class="btn menu-button" type="button" style="text-decoration: none" routerLinkActive="ativo" routerLink="/alunos">
+        <i aria-hidden="true" class="fa fa-graduation-cap"></i>
+        Alunos
+      </a>
+      <a class="btn menu-button" type="button" style="text-decoration: none" routerLinkActive="ativo" routerLink="/funcionarios">
+        <i aria-hidden="true" class="fa fa-coffee"></i>
+        Refeições
+      </a>
+      <a class="btn menu-button" type="button" style="text-decoration: none" routerLinkActive="ativo" routerLink="/funcionarios">
+        <i aria-hidden="true" class="fa fa-user"></i>
+        Funcionários
+      </a>
+      <a class="btn-sair" type="button" style="text-decoration: none" routerLinkActive="ativo">
+        Sair
+        <i aria-hidden="true" class="fa fa-sign-out"></i>
+      </a>
+      <a class="btn-conta" type="button" style="text-decoration: none" routerLinkActive="ativo">
+        <i aria-hidden="true" class="fa fa-user-circle"></i>
+        Minha conta
+      </a>
+    </div>
+    <p-sidebar class="navbar-menu" [(visible)]="exibindoMenu" [style]="{width:'15em'}">
+      <li class="navbar-usuario">CAEST</li>
+      <li class="navbar-menuitem" routerLinkActive="ativo"><a routerLink="/editais">Editais</a></li>
+      <li class="navbar-menuitem" routerLinkActive="ativo"><a routerLink="/alunos">Alunos</a></li>
+      <li class="navbar-menuitem" routerLinkActive="ativo"><a routerLink="/refeicoes">Refeições</a></li>
+      <li class="navbar-menuitem" routerLinkActive="ativo"><a routerLink="/funcionarios">Funcionários</a></li>
+    </p-sidebar>
+  </div>
+</nav>
