--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #404c51;
+  padding: 0;
+  font-family: 'Google Sans', sans-serif;
+  color: #a3a7aa;
+  background-color: #404c51;
 }
 
-label {
-  font-weight: bold;
+.container { 
+  position: absolute;
+  top: 3em;
+  bottom: 0;
+  margin: auto;
+  min-width: 100% !important;
 }
 
-@media (min-width: 1200px){
-  .container {
-    width: 800px;
-    margin: 0 auto;
+.card-novo {
+  margin-top: 2em;
+  margin-left: 30%;
+  margin-right: 30%;
+  padding: 1.5em;
+  background-color: white;
+  min-height: 420px;
+}
+
+.card-listar {
+  margin-top: 2em;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding: 1.5em;
+  background-color: white;
+  min-height: 420px;
+}
+
+@media (max-width: 1200px) {
+  .card-novo {
+    margin-top: 1em;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+  .card-listar {
+    margin-top: 1em;
+    margin-left: 1%;
+    margin-right: 1%;
   }
 }
 
@@ -47,6 +77,32 @@ label {
 }
 
 .btn-sair{
+  margin: 2px;
+  float: right;
+  color: rgb(233, 38, 38);
+  background-color: #20B2AA;
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.btn-conta{
   margin: 2px;
   float: right;
   color: #fff;
